--- a/src/app/components/users-view/user-read/user-read.component.html
+++ b/src/app/components/users-view/user-read/user-read.component.html
@@ -1,3 +1,10 @@
+<mat-card mat-elevation-z4>
+  <mat-card-title>Usuários</mat-card-title>
+  <button mat-raised-button color="primary" (click)="openCreateUserModal()">
+    Cadastrar Usuário
+  </button>
+</mat-card>
+
 <table mat-table [dataSource]="users">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>Nome</th>
@@ -16,7 +23,9 @@
 
   <ng-container matColumnDef="bornDate">
     <th mat-header-cell *matHeaderCellDef>Data de Nascimento</th>
-    <td mat-cell *matCellDef="let row">{{ row.bornDate | date: 'dd/MM/yyyy'}}</td>
+    <td mat-cell *matCellDef="let row">
+      {{ row.bornDate | date: "dd/MM/yyyy" }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
@@ -29,7 +38,11 @@
       >
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-icon-button color="warn" (click)="handleDeleteUser(row.id)">
+      <button
+        mat-icon-button
+        color="warn"
+        (click)="openDeleteUserModal(row.id)"
+      >
         <mat-icon>delete</mat-icon>
       </button>
     </td>
