--- a/src/app/components/user-read/user-read.component.html
+++ b/src/app/components/user-read/user-read.component.html
@@ -34,7 +34,7 @@
       <button
         mat-icon-button
         color="primary"
-        (click)="handleUpdateUser(row.id)"
+        (click)="openUpdateUserModal(row.id)"
       >
         <mat-icon>edit</mat-icon>
       </button>
