--- a/src/app/components/user-delete/user-delete.component.html
+++ b/src/app/components/user-delete/user-delete.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Tem certeza que deseja excluir?</h1>
 <div mat-dialog-content class="container">
-  <button mat-raised-button color="warn" (click)="confirmDeleteUser()">
+  <button mat-raised-button color="warn" (click)="handleDeleteUser()">
     Sim
   </button>
   <button mat-raised-button (click)="closeDeleteUserModal()">Cancelar</button>
