:construction: Feature: validators added

--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -67,8 +67,12 @@
         required
       />
 
-      <mat-error *ngIf="user.controls.bornDate.hasError('required')">
+      <mat-error *ngIf="user.get('bornDate').hasError('required')">
         Campo <strong>obrigatório</strong>
+      </mat-error>
+
+      <mat-error *ngIf="user.get('bornDate').hasError('minAge')">
+        Idade <strong>não</strong> pode ser menor de 18 anos
       </mat-error>
     </mat-form-field>
 
